fixed the overlapping of the all rights reserved thing

--- a/wanderlust_main/css/register_style.css
+++ b/wanderlust_main/css/register_style.css
@@ -9,6 +9,7 @@
 
 body {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
@@ -188,10 +189,7 @@ margin: 0 8px;
 
 /* Footer */
 footer {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin-top: 20px;
     font-size: 12px;
     color: #3a382f;
     text-align: center;
